--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -30,7 +30,7 @@ layout : center
 # Footnote Setting
 # Doc: https://gitpitch.com/docs/settings/footnote
 #
-footnote : "GitPitch - The Fastest Way From Idea To Presentation"
+footnote : "The Serverless Startup - Scaling Ideas, Fast and Easy"
 
 #
 # Published Setting
@@ -42,6 +42,6 @@ published : true
 # Twitter Card Settings [Pro Only]
 # Doc: https://gitpitch.com/docs/settings/twitter-card
 #
-title : "GitPitch In 60 Seconds"
-description : "A short tutorial introducing the power and simplicity of GitPitch, the markdown presentation service on Git."
+title : "The Serverless Startup"
+description : "Scaling Ideas, Fast and Easy, using Serverless and JAMStack."
 thumbnail : https://gitpitch.com/gpimg/tutorial-thumb.png
